@@ -73,6 +73,7 @@ def load_environment(global_conf, app_conf):
 		'enable_song_removal': True,
 		'enable_queue_album': True,
 		'find_over_search': False,
+		'cache_cover_art': False,
 	}
 
 	for key in default_strings:
